data/libdpxwrapper-0.1/libdpx.h

void		DPxSetAdcBuff(unsigned buffAddr, unsigned buffSize);	// Shortcut which assigns Size/BaseAddr/ReadAddr
void		DPxSetAdcSchedOnset(unsigned onset);					// Set nanosecond delay between schedule start and first ADC sample
unsigned	DPxGetAdcSchedOnset(void);								// Get nanosecond delay between schedule start and first ADC sample
void		DPxSetAdcSchedRate(unsigned rateValue, int rateUnits);	// Set ADC schedule sample rate and units
																	// rateUnits is one of the following predefined constants:
																	//		DPXREG_SCHED_CTRL_RATE_HZ		: rateValue is samples per second, maximum 200 kHz
																	//		DPXREG_SCHED_CTRL_RATE_XVID		: rateValue is samples per video frame, maximum 200 kHz
																	//		DPXREG_SCHED_CTRL_RATE_NANO		: rateValue is sample period in nanoseconds, minimum 5000 ns
unsigned	DPxGetAdcSchedRate(int *rateUnits);						// Get ADC schedule sample rate (and optionally get rate units)
void		DPxSetAdcSchedCount(unsigned count);					// Set ADC schedule sample count
unsigned	DPxGetAdcSchedCount(void);								// Get ADC schedule sample count
void		DPxEnableAdcSchedCountdown(void);						// SchedCount decrements at SchedRate, and schedule stops automatically when count hits 0
void		DPxDisableAdcSchedCountdown(void);						// SchedCount increments at SchedRate, and schedule is stopped by calling SchedStop
int			DPxIsAdcSchedCountdown(void);							// Returns non-0 if SchedCount decrements to 0 and automatically stops schedule
void		DPxSetAdcSched(unsigned onset, unsigned rateValue, int rateUnits, unsigned count);	// Shortcut which assigns Onset/Rate/Count. If Count > 0, enables Countdown mode.
void		DPxStartAdcSched(void);									// Start running an ADC schedule
void		DPxStopAdcSched(void);									// Stop running an ADC schedule
int			DPxIsAdcSchedRunning(void);								// Returns non-0 if ADC schedule is currently running
void		DPxEnableAdcLogTimetags(void);							// Each buffered ADC sample is preceeded with a 64-bit nanosecond timetag
void		DPxDisableAdcLogTimetags(void);							// Buffered data has no timetags
int			DPxIsAdcLogTimetags(void);								// Returns non-0 if buffered datasets are preceeded with nanosecond timetag
//	DOUT (Digital Output) subsystem
//	The DATAPixx has 24 TTL outputs.
//	The low 16 bits can be written directly by the user, or updated by a DOUT schedule.
//	The high 8 bits can only be written by the user, not by a schedule.
//	A DOUT schedule is used to automatically copy a waveform from DATAPixx RAM to the low 16 digital outputs.
//	Typical usage steps are the same as for DAC schedules.
//
int			DPxGetDoutNumBits(void);								// Returns number of digital output bits in system (24 in current implementation)
void		DPxSetDoutValue(int bitValue, int bitMask);				// For each of the 24 bits set in bitMask, set the DOUT to the value in the corresponding bitValue
int			DPxGetDoutValue(void);									// Get the values of the 24 DOUT bits
void		DPxEnableDoutButtonSchedules(void);						// Enable automatic DOUT schedules upon DIN button presses
void		DPxDisableDoutButtonSchedules(void);					// Disable automatic DOUT schedules upon DIN button presses
int			DPxIsDoutButtonSchedules(void);							// Returns non-0 if automatic DOUT schedules occur upon DIN button presses
void		DPxSetDoutBuffBaseAddr(unsigned buffBaseAddr);			// Set DOUT RAM buffer start address.  Must be an even value.
unsigned	DPxGetDoutBuffBaseAddr(void);							// Get DOUT RAM buffer start address
void		DPxSetDoutBuffReadAddr(unsigned buffReadAddr);			// Set RAM address from which next DOUT datum will be read.  Must be an even value.
unsigned	DPxGetDoutBuffReadAddr(void);							// Get RAM address from which next DOUT datum will be read
void		DPxSetDoutBuffSize(unsigned buffSize);					// Set DOUT RAM buffer size in bytes.  Must be an even value.  Buffer wraps to Base after Size.
unsigned	DPxGetDoutBuffSize(void);								// Get DOUT RAM buffer size in bytes
void		DPxSetDoutBuff(unsigned buffAddr, unsigned buffSize);	// Shortcut which assigns Size/BaseAddr/ReadAddr
void		DPxSetDoutSchedOnset(unsigned onset);					// Set nanosecond delay between schedule start and first DOUT update
unsigned	DPxGetDoutSchedOnset(void);								// Get nanosecond delay between schedule start and first DOUT update
void		DPxSetDoutSchedRate(unsigned rateValue, int rateUnits);	// Set DOUT schedule update rate and units
																	// rateUnits is one of the following predefined constants:
																	//		DPXREG_SCHED_CTRL_RATE_HZ		: rateValue is updates per second, maximum 10 MHz
																	//		DPXREG_SCHED_CTRL_RATE_XVID		: rateValue is updates per video frame, maximum 10 MHz
																	//		DPXREG_SCHED_CTRL_RATE_NANO		: rateValue is update period in nanoseconds, minimum 100 ns
unsigned	DPxGetDoutSchedRate(int *rateUnits);					// Get DOUT schedule update rate (and optionally get rate units)
void		DPxSetDoutSchedCount(unsigned count);					// Set DOUT schedule update count
unsigned	DPxGetDoutSchedCount(void);								// Get DOUT schedule update count
void		DPxEnableDoutSchedCountdown(void);						// SchedCount decrements at SchedRate, and schedule stops automatically when count hits 0
void		DPxDisableDoutSchedCountdown(void);						// SchedCount increments at SchedRate, and schedule is stopped by calling SchedStop
int			DPxIsDoutSchedCountdown(void);							// Returns non-0 if SchedCount decrements to 0 and automatically stops schedule
void		DPxSetDoutSched(unsigned onset, unsigned rateValue, int rateUnits, unsigned count);	// Shortcut which assigns Onset/Rate/Count. If Count > 0, enables Countdown mode.
void		DPxStartDoutSched(void);								// Start running a DOUT schedule
void		DPxStopDoutSched(void);									// Stop running a DOUT schedule
int			DPxIsDoutSchedRunning(void);							// Returns non-0 if DOUT schedule is currently running
//	DIN (Digital Input) subsystem
//	The DATAPixx has 24 TTL inputs.
//	Transitions on the low 16 bits can be acquired to a RAM buffer.
//	Alternatively, the low 16 bits can be acquired at a fixed frequency using a DIN schedule.
//	Typical usage steps for DIN schedules are the same as for DAC schedules.
//	A 64-bit nanosecond timetag can optionally be stored with each sample in the RAM buffer.
//	The DIN ports are actually bidirectional, and each bit can be programmed to drive its port.
//	Users can program a drive strength, which could be used to vary the intensity of driven LEDs.
//
int			DPxGetDinNumBits(void);									// Returns number of digital input bits in system (24 in current implementation)
int			DPxGetDinValue(void);									// Get the values of the 24 DIN bits
void		DPxSetDinDataDir(int directionMask);					// Set 24-bit port direction mask.  Set mask bits to 1 for each bit which should drive its port.
int			DPxGetDinDataDir(void);									// Get 24-bit port direction mask
void		DPxSetDinDataOut(int dataOut);							// Set the data which should be driven on each port whose output has been enabled by DPxSetDinDataDir()
int			DPxGetDinDataOut(void);									// Get the data which is being driven on each output port
void		DPxSetDinDataOutStrength(double strength);				// Set strength of driven outputs.  Range is 0-1.  Implementation uses 1/16 up to 16/16.
double		DPxGetDinDataOutStrength(void);							// Get strength of driven outputs.  Range is 0-1.  Implementation uses 1/16 up to 16/16.
void		DPxEnableDinStabilize(void);							// DIN transitions are only recognized after entire DIN bus has been stable for 80 ns (good for deskewing parallel busses, and ignoring transmission line reflections).
void		DPxDisableDinStabilize(void);							// Immediately recognize all DIN transitions, possibly with debouncing.
int			DPxIsDinStabilize(void);								// Returns non-0 if DIN transitions are being stabilized
void		DPxEnableDinDebounce(void);								// When a DIN transitions, ignore further DIN transitions for next 30 milliseconds (good for response buttons)
void		DPxDisableDinDebounce(void);							// Immediately recognize all DIN transitions (after possible stabilization)
int			DPxIsDinDebounce(void);									// Returns non-0 if DIN transitions are being debounced
void		DPxEnableDoutDinLoopback(void);							// Enable loopback between digital output ports and digital inputs
void		DPxDisableDoutDinLoopback(void);						// Disable loopback between digital outputs and digital inputs
int			DPxIsDoutDinLoopback(void);								// Returns non-0 if digital inputs are driven by digital output ports
void		DPxSetDinBuffBaseAddr(unsigned buffBaseAddr);			// Set DIN RAM buffer start address.  Must be an even value.
unsigned	DPxGetDinBuffBaseAddr(void);							// Get DIN RAM buffer start address
void		DPxSetDinBuffWriteAddr(unsigned buffWriteAddr);			// Set RAM address to which next DIN datum will be written.  Must be an even value.
unsigned	DPxGetDinBuffWriteAddr(void);							// Get RAM address to which next DIN datum will be written
void		DPxSetDinBuffSize(unsigned buffSize);					// Set DIN RAM buffer size in bytes.  Must be an even value.  Buffer wraps after Size.
unsigned	DPxGetDinBuffSize(void);								// Get DIN RAM buffer size in bytes
void		DPxSetDinBuff(unsigned buffAddr, unsigned buffSize);	// Shortcut which assigns Size/BaseAddr/ReadAddr
void		DPxSetDinSchedOnset(unsigned onset);					// Set nanosecond delay between schedule start and first DIN sample
unsigned	DPxGetDinSchedOnset(void);								// Get nanosecond delay between schedule start and first DIN sample
void		DPxSetDinSchedRate(unsigned rateValue, int rateUnits);	// Set DIN schedule sample rate and units
																	// rateUnits is one of the following predefined constants:
																	//		DPXREG_SCHED_CTRL_RATE_HZ		: rateValue is samples per second, maximum 1 MHz
																	//		DPXREG_SCHED_CTRL_RATE_XVID		: rateValue is samples per video frame, maximum 1 MHz
																	//		DPXREG_SCHED_CTRL_RATE_NANO		: rateValue is sample period in nanoseconds, minimum 1000 ns
unsigned	DPxGetDinSchedRate(int *rateUnits);						// Get DIN schedule sample rate (and optionally get rate units)
void		DPxSetDinSchedCount(unsigned count);					// Set DIN schedule sample count
unsigned	DPxGetDinSchedCount(void);								// Get DIN schedule sample count
void		DPxEnableDinSchedCountdown(void);						// SchedCount decrements at SchedRate, and schedule stops automatically when count hits 0
void		DPxDisableDinSchedCountdown(void);						// SchedCount increments at SchedRate, and schedule is stopped by calling SchedStop
int			DPxIsDinSchedCountdown(void);							// Returns non-0 if SchedCount decrements to 0 and automatically stops schedule
void		DPxSetDinSched(unsigned onset, unsigned rateValue, int rateUnits, unsigned count);	// Shortcut which assigns Onset/Rate/Count. If Count > 0, enables Countdown mode.
void		DPxStartDinSched(void);									// Start running an DIN schedule
void		DPxStopDinSched(void);									// Stop running an DIN schedule
int			DPxIsDinSchedRunning(void);								// Returns non-0 if DIN schedule is currently running
void		DPxEnableDinLogTimetags(void);							// Each buffered DIN sample is preceeded with a 64-bit nanosecond timetag
void		DPxDisableDinLogTimetags(void);							// Buffered data has no timetags
int			DPxIsDinLogTimetags(void);								// Returns non-0 if buffered datasets are preceeded with nanosecond timetag
void		DPxEnableDinLogEvents(void);							// Each DIN transition is automatically logged (no schedule is required.  Best way to log response buttons)
void		DPxDisableDinLogEvents(void);							// Disable automatic logging of DIN transitions
int			DPxIsDinLogEvents(void);								// Returns non-0 if DIN transitions are being logged to RAM buffer
//	TOUCHPixx Subsystem	

int			DPxIsTouchpixx(void);									// 				
void		DPxEnableTouchpixx(void);								// 
void		DPxDisableTouchpixx(void);								// 
int			DPxIsTouchpixxLogContinuousMode(void);					// 
void		DPxEnableTouchpixxLogContinuousMode(void);				// 
void		DPxDisableTouchpixxLogContinuousMode(void);				// 