misc/libdpxwrapper-0.1/libdpxwrapper.py

DPxSetAdcBuff.argtypes = [c_uint, c_uint]
DPxSetAdcSchedOnset = lib_handle.DPxSetAdcSchedOnset
DPxSetAdcSchedOnset.restype = None
DPxSetAdcSchedOnset.argtypes = [c_uint]
DPxGetAdcSchedOnset = lib_handle.DPxGetAdcSchedOnset
DPxGetAdcSchedOnset.restype = c_uint
DPxGetAdcSchedOnset.argtypes = []
DPxSetAdcSchedRate = lib_handle.DPxSetAdcSchedRate
DPxSetAdcSchedRate.restype = None
DPxSetAdcSchedRate.argtypes = [c_uint, c_int]
DPxGetAdcSchedRate = lib_handle.DPxGetAdcSchedRate
DPxGetAdcSchedRate.restype = c_uint
DPxGetAdcSchedRate.argtypes = [POINTER(c_int)]
DPxSetAdcSchedCount = lib_handle.DPxSetAdcSchedCount
DPxSetAdcSchedCount.restype = None
DPxSetAdcSchedCount.argtypes = [c_uint]
DPxGetAdcSchedCount = lib_handle.DPxGetAdcSchedCount
DPxGetAdcSchedCount.restype = c_uint
DPxGetAdcSchedCount.argtypes = []
DPxEnableAdcSchedCountdown = lib_handle.DPxEnableAdcSchedCountdown
DPxEnableAdcSchedCountdown.restype = None
DPxEnableAdcSchedCountdown.argtypes = []
DPxDisableAdcSchedCountdown = lib_handle.DPxDisableAdcSchedCountdown
DPxDisableAdcSchedCountdown.restype = None
DPxDisableAdcSchedCountdown.argtypes = []
DPxIsAdcSchedCountdown = lib_handle.DPxIsAdcSchedCountdown
DPxIsAdcSchedCountdown.restype = c_int
DPxIsAdcSchedCountdown.argtypes = []
DPxSetAdcSched = lib_handle.DPxSetAdcSched
DPxSetAdcSched.restype = None
DPxSetAdcSched.argtypes = [c_uint, c_uint, c_int, c_uint]
DPxStartAdcSched = lib_handle.DPxStartAdcSched
DPxStartAdcSched.restype = None
DPxStartAdcSched.argtypes = []
DPxStopAdcSched = lib_handle.DPxStopAdcSched
DPxStopAdcSched.restype = None
DPxStopAdcSched.argtypes = []
DPxIsAdcSchedRunning = lib_handle.DPxIsAdcSchedRunning
DPxIsAdcSchedRunning.restype = c_int
DPxIsAdcSchedRunning.argtypes = []
DPxEnableAdcLogTimetags = lib_handle.DPxEnableAdcLogTimetags
DPxEnableAdcLogTimetags.restype = None
DPxEnableAdcLogTimetags.argtypes = []
DPxDisableAdcLogTimetags = lib_handle.DPxDisableAdcLogTimetags
DPxDisableAdcLogTimetags.restype = None
DPxDisableAdcLogTimetags.argtypes = []
DPxIsAdcLogTimetags = lib_handle.DPxIsAdcLogTimetags
DPxIsAdcLogTimetags.restype = c_int
DPxIsAdcLogTimetags.argtypes = []
DPxGetDoutNumBits = lib_handle.DPxGetDoutNumBits
DPxGetDoutNumBits.restype = c_int
DPxGetDoutNumBits.argtypes = []
DPxSetDoutValue = lib_handle.DPxSetDoutValue
DPxSetDoutValue.restype = None
DPxSetDoutValue.argtypes = [c_int, c_int]
DPxGetDoutValue = lib_handle.DPxGetDoutValue
DPxGetDoutValue.restype = c_int
DPxGetDoutValue.argtypes = []
DPxEnableDoutButtonSchedules = lib_handle.DPxEnableDoutButtonSchedules
DPxEnableDoutButtonSchedules.restype = None
DPxEnableDoutButtonSchedules.argtypes = []
DPxDisableDoutButtonSchedules = lib_handle.DPxDisableDoutButtonSchedules
DPxDisableDoutButtonSchedules.restype = None
DPxDisableDoutButtonSchedules.argtypes = []
DPxIsDoutButtonSchedules = lib_handle.DPxIsDoutButtonSchedules
DPxIsDoutButtonSchedules.restype = c_int
DPxIsDoutButtonSchedules.argtypes = []
DPxSetDoutBuffBaseAddr = lib_handle.DPxSetDoutBuffBaseAddr
DPxSetDoutBuffBaseAddr.restype = None
DPxSetDoutBuffBaseAddr.argtypes = [c_uint]
DPxGetDoutBuffBaseAddr = lib_handle.DPxGetDoutBuffBaseAddr
DPxGetDoutBuffBaseAddr.restype = c_uint
DPxGetDoutBuffBaseAddr.argtypes = []
DPxSetDoutBuffReadAddr = lib_handle.DPxSetDoutBuffReadAddr
DPxSetDoutBuffReadAddr.restype = None
DPxSetDoutBuffReadAddr.argtypes = [c_uint]
DPxGetDoutBuffReadAddr = lib_handle.DPxGetDoutBuffReadAddr
DPxGetDoutBuffReadAddr.restype = c_uint
DPxGetDoutBuffReadAddr.argtypes = []
DPxSetDoutBuffSize = lib_handle.DPxSetDoutBuffSize
DPxSetDoutBuffSize.restype = None
DPxSetDoutBuffSize.argtypes = [c_uint]
DPxGetDoutBuffSize = lib_handle.DPxGetDoutBuffSize
DPxGetDoutBuffSize.restype = c_uint
DPxGetDoutBuffSize.argtypes = []
DPxSetDoutBuff = lib_handle.DPxSetDoutBuff
DPxSetDoutBuff.restype = None
DPxSetDoutBuff.argtypes = [c_uint, c_uint]
DPxSetDoutSchedOnset = lib_handle.DPxSetDoutSchedOnset
DPxSetDoutSchedOnset.restype = None
DPxSetDoutSchedOnset.argtypes = [c_uint]
DPxGetDoutSchedOnset = lib_handle.DPxGetDoutSchedOnset
DPxGetDoutSchedOnset.restype = c_uint
DPxGetDoutSchedOnset.argtypes = []
DPxSetDoutSchedRate = lib_handle.DPxSetDoutSchedRate
DPxSetDoutSchedRate.restype = None
DPxSetDoutSchedRate.argtypes = [c_uint, c_int]
DPxGetDoutSchedRate = lib_handle.DPxGetDoutSchedRate
DPxGetDoutSchedRate.restype = c_uint
DPxGetDoutSchedRate.argtypes = [POINTER(c_int)]
DPxSetDoutSchedCount = lib_handle.DPxSetDoutSchedCount
DPxSetDoutSchedCount.restype = None
DPxSetDoutSchedCount.argtypes = [c_uint]
DPxGetDoutSchedCount = lib_handle.DPxGetDoutSchedCount
DPxGetDoutSchedCount.restype = c_uint
DPxGetDoutSchedCount.argtypes = []
DPxEnableDoutSchedCountdown = lib_handle.DPxEnableDoutSchedCountdown
DPxEnableDoutSchedCountdown.restype = None
DPxEnableDoutSchedCountdown.argtypes = []
DPxDisableDoutSchedCountdown = lib_handle.DPxDisableDoutSchedCountdown
DPxDisableDoutSchedCountdown.restype = None
DPxDisableDoutSchedCountdown.argtypes = []
DPxIsDoutSchedCountdown = lib_handle.DPxIsDoutSchedCountdown
DPxIsDoutSchedCountdown.restype = c_int
DPxIsDoutSchedCountdown.argtypes = []
DPxSetDoutSched = lib_handle.DPxSetDoutSched
DPxSetDoutSched.restype = None
DPxSetDoutSched.argtypes = [c_uint, c_uint, c_int, c_uint]
DPxStartDoutSched = lib_handle.DPxStartDoutSched
DPxStartDoutSched.restype = None
DPxStartDoutSched.argtypes = []
DPxStopDoutSched = lib_handle.DPxStopDoutSched
DPxStopDoutSched.restype = None
DPxStopDoutSched.argtypes = []
DPxIsDoutSchedRunning = lib_handle.DPxIsDoutSchedRunning
DPxIsDoutSchedRunning.restype = c_int
DPxIsDoutSchedRunning.argtypes = []
DPxGetDinNumBits = lib_handle.DPxGetDinNumBits
DPxGetDinNumBits.restype = c_int
DPxGetDinNumBits.argtypes = []
DPxGetDinValue = lib_handle.DPxGetDinValue
DPxGetDinValue.restype = c_int
DPxGetDinValue.argtypes = []
DPxSetDinDataDir = lib_handle.DPxSetDinDataDir
DPxSetDinDataDir.restype = None
DPxSetDinDataDir.argtypes = [c_int]
DPxGetDinDataDir = lib_handle.DPxGetDinDataDir
DPxGetDinDataDir.restype = c_int
DPxGetDinDataDir.argtypes = []
DPxSetDinDataOut = lib_handle.DPxSetDinDataOut
DPxSetDinDataOut.restype = None
DPxSetDinDataOut.argtypes = [c_int]
DPxGetDinDataOut = lib_handle.DPxGetDinDataOut
DPxGetDinDataOut.restype = c_int
DPxGetDinDataOut.argtypes = []
DPxSetDinDataOutStrength = lib_handle.DPxSetDinDataOutStrength
DPxSetDinDataOutStrength.restype = None
DPxSetDinDataOutStrength.argtypes = [c_double]
DPxGetDinDataOutStrength = lib_handle.DPxGetDinDataOutStrength
DPxGetDinDataOutStrength.restype = c_double
DPxGetDinDataOutStrength.argtypes = []
DPxEnableDinStabilize = lib_handle.DPxEnableDinStabilize
DPxEnableDinStabilize.restype = None
DPxEnableDinStabilize.argtypes = []
DPxDisableDinStabilize = lib_handle.DPxDisableDinStabilize
DPxDisableDinStabilize.restype = None
DPxDisableDinStabilize.argtypes = []
DPxIsDinStabilize = lib_handle.DPxIsDinStabilize
DPxIsDinStabilize.restype = c_int
DPxIsDinStabilize.argtypes = []
DPxEnableDinDebounce = lib_handle.DPxEnableDinDebounce
DPxEnableDinDebounce.restype = None
DPxEnableDinDebounce.argtypes = []
DPxDisableDinDebounce = lib_handle.DPxDisableDinDebounce
DPxDisableDinDebounce.restype = None
DPxDisableDinDebounce.argtypes = []
DPxIsDinDebounce = lib_handle.DPxIsDinDebounce
DPxIsDinDebounce.restype = c_int
DPxIsDinDebounce.argtypes = []
DPxEnableDoutDinLoopback = lib_handle.DPxEnableDoutDinLoopback
DPxEnableDoutDinLoopback.restype = None
DPxEnableDoutDinLoopback.argtypes = []
DPxDisableDoutDinLoopback = lib_handle.DPxDisableDoutDinLoopback
DPxDisableDoutDinLoopback.restype = None
DPxDisableDoutDinLoopback.argtypes = []
DPxIsDoutDinLoopback = lib_handle.DPxIsDoutDinLoopback
DPxIsDoutDinLoopback.restype = c_int
DPxIsDoutDinLoopback.argtypes = []
DPxSetDinBuffBaseAddr = lib_handle.DPxSetDinBuffBaseAddr
DPxSetDinBuffBaseAddr.restype = None
DPxSetDinBuffBaseAddr.argtypes = [c_uint]
DPxGetDinBuffBaseAddr = lib_handle.DPxGetDinBuffBaseAddr
DPxGetDinBuffBaseAddr.restype = c_uint
DPxGetDinBuffBaseAddr.argtypes = []
DPxSetDinBuffWriteAddr = lib_handle.DPxSetDinBuffWriteAddr
DPxSetDinBuffWriteAddr.restype = None
DPxSetDinBuffWriteAddr.argtypes = [c_uint]
DPxGetDinBuffWriteAddr = lib_handle.DPxGetDinBuffWriteAddr
DPxGetDinBuffWriteAddr.restype = c_uint
DPxGetDinBuffWriteAddr.argtypes = []
DPxSetDinBuffSize = lib_handle.DPxSetDinBuffSize
DPxSetDinBuffSize.restype = None
DPxSetDinBuffSize.argtypes = [c_uint]
DPxGetDinBuffSize = lib_handle.DPxGetDinBuffSize
DPxGetDinBuffSize.restype = c_uint
DPxGetDinBuffSize.argtypes = []
DPxSetDinBuff = lib_handle.DPxSetDinBuff
DPxSetDinBuff.restype = None
DPxSetDinBuff.argtypes = [c_uint, c_uint]
DPxSetDinSchedOnset = lib_handle.DPxSetDinSchedOnset
DPxSetDinSchedOnset.restype = None
DPxSetDinSchedOnset.argtypes = [c_uint]
DPxGetDinSchedOnset = lib_handle.DPxGetDinSchedOnset
DPxGetDinSchedOnset.restype = c_uint
DPxGetDinSchedOnset.argtypes = []
DPxSetDinSchedRate = lib_handle.DPxSetDinSchedRate
DPxSetDinSchedRate.restype = None
DPxSetDinSchedRate.argtypes = [c_uint, c_int]
DPxGetDinSchedRate = lib_handle.DPxGetDinSchedRate
DPxGetDinSchedRate.restype = c_uint
DPxGetDinSchedRate.argtypes = [POINTER(c_int)]
DPxSetDinSchedCount = lib_handle.DPxSetDinSchedCount
DPxSetDinSchedCount.restype = None
DPxSetDinSchedCount.argtypes = [c_uint]
DPxGetDinSchedCount = lib_handle.DPxGetDinSchedCount
DPxGetDinSchedCount.restype = c_uint
DPxGetDinSchedCount.argtypes = []
DPxEnableDinSchedCountdown = lib_handle.DPxEnableDinSchedCountdown
DPxEnableDinSchedCountdown.restype = None
DPxEnableDinSchedCountdown.argtypes = []
DPxDisableDinSchedCountdown = lib_handle.DPxDisableDinSchedCountdown
DPxDisableDinSchedCountdown.restype = None
DPxDisableDinSchedCountdown.argtypes = []
DPxIsDinSchedCountdown = lib_handle.DPxIsDinSchedCountdown
DPxIsDinSchedCountdown.restype = c_int
DPxIsDinSchedCountdown.argtypes = []
DPxSetDinSched = lib_handle.DPxSetDinSched
DPxSetDinSched.restype = None
DPxSetDinSched.argtypes = [c_uint, c_uint, c_int, c_uint]
DPxStartDinSched = lib_handle.DPxStartDinSched
DPxStartDinSched.restype = None
DPxStartDinSched.argtypes = []
DPxStopDinSched = lib_handle.DPxStopDinSched
DPxStopDinSched.restype = None
DPxStopDinSched.argtypes = []
DPxIsDinSchedRunning = lib_handle.DPxIsDinSchedRunning
DPxIsDinSchedRunning.restype = c_int
DPxIsDinSchedRunning.argtypes = []
DPxEnableDinLogTimetags = lib_handle.DPxEnableDinLogTimetags
DPxEnableDinLogTimetags.restype = None
DPxEnableDinLogTimetags.argtypes = []
DPxDisableDinLogTimetags = lib_handle.DPxDisableDinLogTimetags
DPxDisableDinLogTimetags.restype = None
DPxDisableDinLogTimetags.argtypes = []
DPxIsDinLogTimetags = lib_handle.DPxIsDinLogTimetags
DPxIsDinLogTimetags.restype = c_int
DPxIsDinLogTimetags.argtypes = []
DPxEnableDinLogEvents = lib_handle.DPxEnableDinLogEvents
DPxEnableDinLogEvents.restype = None
DPxEnableDinLogEvents.argtypes = []
DPxDisableDinLogEvents = lib_handle.DPxDisableDinLogEvents
DPxDisableDinLogEvents.restype = None
DPxDisableDinLogEvents.argtypes = []
DPxIsDinLogEvents = lib_handle.DPxIsDinLogEvents
DPxIsDinLogEvents.restype = c_int
DPxIsDinLogEvents.argtypes = []
DPxIsTouchpixx = lib_handle.DPxIsTouchpixx
DPxIsTouchpixx.restype = c_int
DPxIsTouchpixx.argtypes = []
DPxEnableTouchpixx = lib_handle.DPxEnableTouchpixx
DPxEnableTouchpixx.restype = None
DPxEnableTouchpixx.argtypes = []
DPxDisableTouchpixx = lib_handle.DPxDisableTouchpixx
DPxDisableTouchpixx.restype = None
DPxDisableTouchpixx.argtypes = []
DPxIsTouchpixxLogContinuousMode = lib_handle.DPxIsTouchpixxLogContinuousMode
DPxIsTouchpixxLogContinuousMode.restype = c_int
DPxIsTouchpixxLogContinuousMode.argtypes = []
DPxEnableTouchpixxLogContinuousMode = lib_handle.DPxEnableTouchpixxLogContinuousMode
DPxEnableTouchpixxLogContinuousMode.restype = None
DPxEnableTouchpixxLogContinuousMode.argtypes = []
DPxDisableTouchpixxLogContinuousMode = lib_handle.DPxDisableTouchpixxLogContinuousMode
DPxDisableTouchpixxLogContinuousMode.restype = None
DPxDisableTouchpixxLogContinuousMode.argtypes = []
